2004-05-21  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-rakuten.el (shimbun-rss-build-message-id): Modify
	the regexp.
	(shimbun-rss-get-date): Ditto.

2004-05-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-expire): Fix last change.

2004-05-18  Katsumi Yamaoka  <yamaoka@jpl.org>
	Suggested by Yoichi NAKAYAMA <yoichi@geiin.org>

	* w3m-util.el (w3m-replace-in-string): New function which is a
	copy of shimbun-replace-in-string.
	* w3m.el (w3m-active-region-or-url-at-point): Use it; remove all
	whitespace in region.

2004-05-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-view-inline-image): Bind
	mew-use-text/html as t.

	* shimbun/mew-shimbun.el (mew-shimbun-expire): Add message for
	nothing to do.

2004-05-17  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-fml.el (shimbun-make-contents): Normalize header values.

2004-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-home-page): Improve the customizing widget.

2004-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-expand-url): Bind file-name-handler-alist as nil.

2004-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-arrived-ignored-regexp): Add about:blank.
	(w3m-history-ignored-regexp): Ditto.
	(w3m-about-retrieve): Ditto.
	(w3m-buffer-setup): Prefer the last visited emacs-w3m buffer.

2004-05-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Stricten
	checking whether images are successfully retieved or not.

2004-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-clear-contents): Don't remove main
	text contents.

2004-05-12  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mhonarc.el (shimbun-mhonarc-get-headers): Enclosed
	with `save-excursion'.

	* shimbun/sb-namazu.el (shimbun-namazu-group-url-alist): Added
	"kakasi-dev".
	(shimbun-get-headers): Followed tha change of "emacs-w3m" ml
	archive.
